--- a/HelloGCM/templates/HelloGCM/plot_template.html
+++ b/HelloGCM/templates/HelloGCM/plot_template.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,4 +14,4 @@
     <img src="{% static 'admin/plot.png' %}" alt="CAN Data Plot">
 </body>
 
-</html>
+</html> -->
