--- a/HelloGCM/templates/HelloGCM/index.html
+++ b/HelloGCM/templates/HelloGCM/index.html
@@ -2,17 +2,15 @@
 
 <html>
 
-    <head>
+<head>
 
-        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
 
-    </head>
+</head>
 
-
+<body>
     <h1>Good Morning</h1>
-    
-       
-
+</body>
 
 </html>
