fixed /plot link error

--- a/HelloGCM/templates/HelloGCM/index.html
+++ b/HelloGCM/templates/HelloGCM/index.html
@@ -1,16 +1,13 @@
 {% load static %}
 
 <html>
-
 <head>
-
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
-
 </head>
-
 <body>
     <h1>Good Morning</h1>
+    <h1>Engine RPM Plot</h1>
+    <img src="{% static 'HelloGCM/Engine_RPM_plot.png' %}" alt="Engine RPM Plot">
 </body>
-
 </html>
